# log-for-linux

./: CLAUDE.md  README.md  meson.build
docs/: M3-CHECKLIST.md  SCOPE.md
src/: adif_test.c  engine_test.c  macro_test.c  store_test.c  tci_test.c  udp_test.c
src/app/: main.c  qso_row.c  qso_row.h  settings.c  settings.h  win.c  win.h
src/engine/: adif.c  adif.h  engine.c  engine.h  log_store.c  log_store.h  macros.c  macros.h  tci_client.c  tci_client.h  wsjtx_udp.c  wsjtx_udp.h
